--- a/views/account.html
+++ b/views/account.html
@@ -20,7 +20,7 @@
 			</div>
 		</header>
 		<div id='content'>
-			<main>
+			<main id='account-main'>
 				<div id='photo-section'>
 					<div id='container'></div>
 				</div>
