--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
 		</header>
 		<div id='home-message-container'></div>
 		<div id='form-container' class='invisible'></div>
-		<main>
+		<main id='home-main'>
 			<div id='gallery'></div>
 		</main>
 		<footer>@grevenko 2018</footer>
