--- a/views/account.html
+++ b/views/account.html
@@ -4,6 +4,7 @@
 		<title>My account</title>
 		<link rel='stylesheet' href='css/styles.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	</head>
 	<body>
 		<header>
@@ -13,6 +14,8 @@
 				<input id='file-upload' id='upload' accept='.jpg, .jpeg, .png' type='file'/>
 				<button id='capture-button' disabled>TAKE A PICTURE</button>
 				<button id='clear-button'>CLEAR</button>
+				<button id='sign-button' disabled><i class="fas fa-pencil-alt"></i></button>
+				<input id='palette' type='color'>
 			</div>
 			<div>
 				<a id='home-button' href='/'>HOME</a>
