--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,24 +1,12 @@
-:root {
-	--button-color: rgb(199, 105, 46);
-	--header-color: #2a313c;
-	--message-container-color: rgb(101, 82, 73, 0.8);
-	--main-background-color: #49bff3;
-	--input-color: rgba(254, 146, 81, 0.5);
-	--login-color: #373944;
-	--like-color: #41bef5;
-	--comment-color: #41bef5;
-	--highlighted-comment-color: rgb(255, 98, 1);
-	--photo-container-odd-color: #f9f9fa;
-	--photo-container-even-color: #ffffff;
-}
-
 body {
 	box-sizing: border-box;
+	min-width: 320px;
+	min-height: 320px;
 	margin: 0;
-	overflow-x: hidden;
-	font-size: 2vh;
+	font-size: 120%;
 	font-family: open sans;
 	background-color: #49bff3;
+	/* background-color: white; */
 }
 
 header {
@@ -27,20 +15,19 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	position: fixed;
-	width: 100%;
-	height: 4vh;
 	top: 0;
-	padding: 1vh;
 	z-index: 1;
+	width: 100%;
+	height: 4%;
+	padding-left: 5px;
+	padding-right: 5px;
 	background-color: #13232f;
 	color: white;
+	resize: both;
 }
 
 header a {
-	height: 4vh;
-	margin-right: 1vh;
-	padding: 1vh;
-	font-size: 2vh;
+	margin-right: 15px;
 	background-color: #2a313c;
 	color: #3c86a9;
 	text-decoration: none;
@@ -56,12 +43,11 @@ header a:hover {
 }
 
 button {
-	height: 4vh;
 	border: 0;
-	font-size: 2vh;
 	background-color: #2a313c;
 	color: #3c86a9;
 	border-radius: 6px;
+	font-size: 100%;
 }
 
 button:hover {
@@ -73,11 +59,11 @@ button:focus {
 }
 
 input {
-	padding: 0.5vmin;
-	font-size: 2vh;
+	padding: 3px;
 	color: #717171;
 	border: 0;
 	border-radius: 4px;
+	font-size: 100%;
 }
 
 input:focus {
@@ -112,10 +98,10 @@ footer {
 	align-items: center;
 	position: fixed;
 	width: 100%;
-	height: 3vh;
+	height: 4%;
 	bottom: 0;
 	z-index: 1;
-	padding: 1vh;
+	padding-left: 5px;
 	background-color: #2a313c;
 	color: white;
 }
@@ -137,7 +123,7 @@ footer {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	z-index: 3;
-	padding: 3vmin;
+	padding: 1%;
 	color: white;
 	background-color: #13232f;
 	border-radius: 4px;
@@ -164,30 +150,26 @@ footer {
 }
 
 #header-buttons-div button {
-	margin: 0.5vmin;
+	margin: 10px;
 }
 
 #home-main {
-	margin-top: 6vh;
-	margin-bottom: 5vh;
-}
-
-#website-title {
-	font-size: 3vh;
+	padding-top: 2%;
+	padding-bottom: 2%;
 }
 
 #home-message-container {
 	position: fixed;
-	top: 12vh;
+	top: 10.5%;
 	right: 0;
 	color: #ffffff;
 	background-color: #12242f;
-	padding: 1vh;
+	padding: 0.5%;
 	text-align: right;
 }
 
 #account-message-container {
-	padding: 1vh;
+	padding: 1%;
 	text-align: center;
 	color: #ffffff;
 	background-color: #13232f;
@@ -195,24 +177,19 @@ footer {
 
 #reset-password-message-container {
 	background-color: #13232f;
-	padding: 1vh;
+	padding: 1%;
 }
 
 #form-container {
 	position: fixed;
-	top: 6vh;
-	right: 0;
-	height: 4vh;
-	padding: 1vh;
-	background-color: #2a313c;
+    top: 4%;
+    right: 0;
+    padding: 0.5%;
+    background-color: #2a313c;
 }
 
 #form-container input {
-	margin-right: 1vmin;
-}
-
-#form-container button {
-	margin-right: 1vmin;
+	margin-right: 5px;
 }
 
 #gallery {
@@ -222,7 +199,9 @@ footer {
 }
 
 .photo-container {
-	width: 80%;
+	width: 60%;
+	margin: 1%;
+	padding: 1%;
 	color: #b2b2b2;
 	background-color: #2a313c;
 }
@@ -235,7 +214,6 @@ footer {
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
-	padding: 1vmin;
 	font-weight: bold;
 }
 
@@ -248,12 +226,14 @@ footer {
 }
 
 .like {
-	margin-right: 2vmin;
+	margin-right: 1%;
 	color: #41bef5;
 }
 
 .comment-container {
 	display: flex;
+	margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .comment-symbol {
@@ -264,33 +244,28 @@ footer {
 	color: #ffffff;
 }
 
-.comments {
-	margin-left: 1vh;
-}
-
 .delete-comment-button {
-	margin-left: 1vh;
-	margin-top: -1vh;
+	margin-left: 15px;
+	padding: 0;
+	font-size: initial;
 	color: #b2b2b2;
-}
-
-.login {
-	padding: 1vh;
-	font-size: 2vh;
-	font-weight: bold;
-	background-color: #5f9020;
-	color: white;
 }
 
 .login-div {
 	font-weight: bold;
-	margin-right: 1vmin;
+	margin-right: 10px;
 	color: #ffffff;
 }
 
 .add-comment-input {
-	margin: 1vh;
+	width: 100%;
+	margin-top: 1%;
 }
+
+/* .add-comment-input[placeholder] {
+	line-height: 30px;
+	font-size: 24px;
+} */
 
 #uploaded-image {
 	position: absolute;
@@ -298,19 +273,17 @@ footer {
 	height: 100%;
 }
 
-#hello {
-	font-size: 3vh;
-}
-
 #content {
-	margin-top: 8vh;
-	margin-bottom: 5vh;
+	padding-top: 2%;
+	padding-bottom: 2%;
+    /* position: absolute;
+    top: 4%;
+    bottom: 4%;
+	width: 100%; */
 }
 
 .custom-file-upload {
-	height: 4vh;
 	border: 0;
-	font-size: 2vh;
 	background-color: #2a313c;
 	color: #3c86a9;
 	border-radius: 6px;
@@ -347,7 +320,8 @@ footer {
 	overflow: hidden;
 	width: 80vmin;
 	height: 60vmin;
-	margin: 1vmin;
+	margin: 1%;
+	border: 1px solid black;
 }
 
 #video {
@@ -382,10 +356,9 @@ footer {
 }
 
 #stickers-container button {
-	height: 6vh;
-	margin: 1vh;
-	font-size: 4vh;
-	vertical-align: center;
+	margin: 1%;
+	padding: 1%;
+	font-size: 150%;
 }
 
 #stickers {
@@ -394,7 +367,7 @@ footer {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	margin: 1vmin;
+	margin: 1%;
 	overflow: hidden;
 }
 
@@ -414,11 +387,6 @@ footer {
 	justify-content: center;
 }
 
-#change-section button {
-	margin: 5px;
-	padding: 0.5vmin;
-}
-
 #change-section input {
 	margin: 5px;
 }
@@ -431,8 +399,8 @@ footer {
 }
 
 .user-photo-container {
-	margin: 1vh;
-	padding: 1vh;
+	margin: 1%;
+	padding: 1%;
 	background-color: #13232f;
 }
 
@@ -442,16 +410,12 @@ footer {
 
 .publish-button {
 	width: 50%;
-	margin-top: 1%;
-	margin-bottom: 1%;
 	color: #5f9020;
 	border: 1px solid #5f9020;
 }
 
 .delete-button {
 	width: 50%;
-	margin-top: 1%;
-	margin-bottom: 1%;
 }
 
 input[type="file"] {
