--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,10 +3,8 @@ body {
 	min-width: 320px;
 	min-height: 320px;
 	margin: 0;
-	font-size: 120%;
 	font-family: open sans;
-	background-color: #49bff3;
-	/* background-color: white; */
+	background-color: #fafafa;
 }
 
 header {
@@ -18,20 +16,24 @@ header {
 	top: 0;
 	z-index: 1;
 	width: 100%;
-	height: 4%;
+	height: 77px;
 	padding-left: 5px;
 	padding-right: 5px;
-	background-color: #13232f;
-	color: white;
+	background-color: #ffffff;
 	resize: both;
 }
 
 header a {
-	margin-right: 15px;
-	background-color: #2a313c;
-	color: #3c86a9;
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border: 1px solid #dbdbdb;
+	border-radius: 4px;
+	font-weight: bold;
 	text-decoration: none;
-	border-radius: 6px;
+	color: #262626;
+	background-color: transparent;
 }
 
 header a:visited {
@@ -43,11 +45,15 @@ header a:hover {
 }
 
 button {
-	border: 0;
-	background-color: #2a313c;
-	color: #3c86a9;
-	border-radius: 6px;
-	font-size: 100%;
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border: 1px solid #dbdbdb;
+	border-radius: 4px;
+	font-weight: bold;
+	color: #262626;
+	background-color: transparent;
 }
 
 button:hover {
@@ -59,11 +65,11 @@ button:focus {
 }
 
 input {
-	padding: 3px;
+	box-sizing: border-box;
+	padding: 5px;
 	color: #717171;
 	border: 0;
 	border-radius: 4px;
-	font-size: 100%;
 }
 
 input:focus {
@@ -81,29 +87,6 @@ input:focus {
 
 ::-ms-input-placeholder { /* Microsoft Edge */
 	color: #717171;
-}
-
-.green-button {
-	color: #5f9020;
-	border: 1px solid #5f9020;
-}
-
-.green-button:hover {
-	color: #ffffff;
-	background-color: #5f9020;
-}
-
-footer {
-	display: flex;
-	align-items: center;
-	position: fixed;
-	width: 100%;
-	height: 4%;
-	bottom: 0;
-	z-index: 1;
-	padding-left: 5px;
-	background-color: #2a313c;
-	color: white;
 }
 
 #overlay {
@@ -124,8 +107,7 @@ footer {
 	transform: translate(-50%, -50%);
 	z-index: 3;
 	padding: 1%;
-	color: white;
-	background-color: #13232f;
+	background-color: #fafafa;
 	border-radius: 4px;
 	box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
 	opacity: 1;
@@ -134,11 +116,6 @@ footer {
 #custom-confirm button {
 	width: 48%;
 	margin: 1%;
-}
-
-.ok-button {
-	color: #5f9020;
-	border: 1px solid #5f9020;
 }
 
 .no-scroll {
@@ -154,25 +131,23 @@ footer {
 }
 
 #home-main {
-	padding-top: 2%;
-	padding-bottom: 2%;
+	padding-top: 77px;
 }
 
 #home-message-container {
 	position: fixed;
-	top: 10.5%;
+	top: 123px;
 	right: 0;
-	color: #ffffff;
-	background-color: #12242f;
 	padding: 0.5%;
 	text-align: right;
+	background-color: #ffffff;
+	border: 1px solid #e6e6e6;
+	border-radius: 4px;
 }
 
 #account-message-container {
 	padding: 1%;
 	text-align: center;
-	color: #ffffff;
-	background-color: #13232f;
 }
 
 #reset-password-message-container {
@@ -182,14 +157,17 @@ footer {
 
 #form-container {
 	position: fixed;
-    top: 4%;
-    right: 0;
-    padding: 0.5%;
-    background-color: #2a313c;
+	top: 77px;
+	right: 0;
+	padding: 0.5%;
+	background-color: #ffffff;
+	border: 1px solid #e6e6e6;
+	border-radius: 4px;
 }
 
 #form-container input {
-	margin-right: 5px;
+	border: 1px solid #e6e6e6;
+	border-radius: 4px;
 }
 
 #gallery {
@@ -199,11 +177,17 @@ footer {
 }
 
 .photo-container {
-	width: 60%;
+	max-width: 614px;
 	margin: 1%;
-	padding: 1%;
-	color: #b2b2b2;
-	background-color: #2a313c;
+	border: 1px solid #e6e6e6;
+	border-radius: 4px;
+	background-color: #ffffff;
+}
+
+.login {
+	margin: 5px;
+	font-weight: 600;
+	color: #262626;
 }
 
 .photo {
@@ -213,12 +197,7 @@ footer {
 .like-comment {
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-end;
-	font-weight: bold;
-}
-
-.like-symbol {
-	color: #41bef5;
+	margin: 5px;
 }
 
 .like-symbol:hover {
@@ -227,45 +206,31 @@ footer {
 
 .like {
 	margin-right: 1%;
-	color: #41bef5;
 }
 
 .comment-container {
 	display: flex;
 	margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.comment-symbol {
-	color: #ffffff;
-}
-
-.comment {
-	color: #ffffff;
+	margin-bottom: 5px;
 }
 
 .delete-comment-button {
-	margin-left: 15px;
+	margin-left: 10px;
 	padding: 0;
-	font-size: initial;
-	color: #b2b2b2;
+	border: 0;
 }
 
 .login-div {
-	font-weight: bold;
-	margin-right: 10px;
-	color: #ffffff;
+	padding-left: 5px;
+	padding-right: 5px;
+	font-weight: 600;
+	color: #262626;
 }
 
 .add-comment-input {
 	width: 100%;
 	margin-top: 1%;
 }
-
-/* .add-comment-input[placeholder] {
-	line-height: 30px;
-	font-size: 24px;
-} */
 
 #uploaded-image {
 	position: absolute;
@@ -274,38 +239,31 @@ footer {
 }
 
 #content {
-	padding-top: 2%;
-	padding-bottom: 2%;
-    /* position: absolute;
-    top: 4%;
-    bottom: 4%;
-	width: 100%; */
+	padding-top: 77px;
 }
 
 .custom-file-upload {
-	border: 0;
-	background-color: #2a313c;
-	color: #3c86a9;
-	border-radius: 6px;
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border: 1px solid #dbdbdb;
+	border-radius: 4px;
+	font-weight: bold;
+	color: #262626;
+	background-color: transparent;
 }
 
 .custom-file-upload:hover {
 	cursor: pointer;
 }
 
-#capture-button {
-	border-radius: 6px;
-	color: #5f9020;
-	border: 1px solid #5f9020;
-}
-
 #capture-button:disabled {
-	color: #b2b2b2;
-	border: 1px solid #b2b2b2;
+	cursor: auto;
 }
 
-#photo-buttons input {
-	background-color: #2a313c;
+#palette {
+	box-sizing: initial;
 }
 
 #photo-section {
@@ -345,39 +303,47 @@ footer {
 #change-container {
 	display: flex;
 	justify-content: center;
-	background-color: #13232f;
+	border: 1px solid #dbdbdb;
 }
 
 #stickers-container {
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	flex-direction: column;
 	background-color: #ffffff;
+}
+
+#stickers-carousel-buttons {
+	display: flex;
+	justify-content: center;
 }
 
 #stickers-container button {
 	margin: 1%;
 	padding: 1%;
-	font-size: 150%;
 }
 
 #stickers {
-	height: 20vh;
+	height: 20vmin;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	margin: 1%;
 	overflow: hidden;
 }
 
-#stickers img {
-	margin-left: 1vw;
-	margin-right: 1vw;
+.image-div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 20vmin;
+	height: 20vmin;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 .sticker {
-	height: 20vh;
+	width: 20vmin;
 	cursor: pointer;
 }
 
@@ -400,8 +366,6 @@ footer {
 
 .user-photo-container {
 	margin: 1%;
-	padding: 1%;
-	background-color: #13232f;
 }
 
 .user-photo {
@@ -410,8 +374,6 @@ footer {
 
 .publish-button {
 	width: 50%;
-	color: #5f9020;
-	border: 1px solid #5f9020;
 }
 
 .delete-button {
@@ -430,9 +392,5 @@ input[type="file"] {
 }
 
 #sign-button:disabled {
-	color: #b2b2b2;
-}
-
-.can-draw {
-	color: #5f9020;
+	cursor: auto;
 }
