--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>Camagru</title>
 		<link rel='stylesheet' href='css/styles.css'>
-		<!-- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'> -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	</head>
 	<body>
@@ -11,8 +10,9 @@
 			<div id='website-title'>Camagru Gallery</div>
 			<div id='header-buttons-div'></div>
 		</header>
+		
 		<div id='form-container' class='invisible'>
-			<div id='home-message-container'></div>
+			<span id='home-message-container'></span>
 		</div>
 		<main id='home-main'>
 			<div id='gallery'></div>
