--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -233,9 +233,7 @@ input:focus {
 }
 
 #uploaded-image {
-	position: absolute;
-	width: 100%;
-	height: 100%;
+	max-height: 100%;
 }
 
 #content {
@@ -274,6 +272,7 @@ input:focus {
 }
 
 #container {
+	text-align: center;
 	position: relative;
 	overflow: hidden;
 	width: 80vmin;
@@ -294,26 +293,18 @@ input:focus {
 	text-align: center;
 }
 
-#uploaded-image {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-}
-
 #change-section {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	min-width: 800px;
 }
 
 #change-container {
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	border: 1px solid #dbdbdb;
-}
-
-#change-section {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
 }
 
 #change-section input {
