--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -233,7 +233,9 @@ input:focus {
 }
 
 #uploaded-image {
-	max-height: 100%;
+	position: relative;
+	width: auto;
+	height: auto;
 }
 
 #content {
@@ -275,14 +277,13 @@ input:focus {
 	text-align: center;
 	position: relative;
 	overflow: hidden;
-	width: 80vmin;
-	height: 60vmin;
+	width: 80vh;
+	height: 60vh;
 	margin: 1%;
-	border: 1px solid black;
 }
 
 #video {
-	position: absolute;
+	position: relative;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
