fixed sticker resizing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -384,3 +384,11 @@ input:focus {
 input[type="file"] {
 	display: none;
 }
+
+img {
+	-webkit-user-drag: none;
+	-khtml-user-drag: none;
+	-moz-user-drag: none;
+	-o-user-drag: none;
+	user-drag: none;
+}
