fixed likes, dislikes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -200,8 +200,12 @@ input:focus {
 	margin: 5px;
 }
 
-.like-symbol:hover {
+.like-symbol-active:hover {
 	cursor: pointer;
+}
+
+.like-symbol-liked {
+	color: red;
 }
 
 .like {
