--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,10 @@
 	</head>
 	<body>
 		<header>
-			<div id='website-title'>Camagru Gallery</div>
+			<div id='website-title'>
+				<i class="far fa-images"></i>
+				Camagru Gallery
+			</div>
 			<div id='header-buttons-div'></div>
 		</header>
 		
