initiated js refactoring

--- a/views/account.html
+++ b/views/account.html
@@ -47,7 +47,7 @@
 						<input id='password' placeholder='Password' type='password' value=''>
 						<button id='change-password-button'>Change</button>
 					</div>
-					<button id='notification'></button>
+					<button id='notification-status'></button>
 				</div>
 			</section>
 			<div id='user-photos'></div>
@@ -55,4 +55,5 @@
 	</body>
 	<script src='js/account.js' type='module'></script>
 	<script src='/js/utils.js' type='module'></script>
+	<script src='/js/stretcher.js' type='module'></script>
 </html>
