--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,426 +23,446 @@
 } */
 
 @font-face {
-	font-family: "Shefilla";
-	src: url("../fonts/shefilla/Shefilla TTF.ttf") format("opentype");
+  font-family: 'Shefilla';
+  src: url('../fonts/shefilla/Shefilla TTF.ttf') format('opentype');
 }
 
 #website-title {
-	font-family: "Shefilla";
-	font-size: 3em;
+  font-family: 'Shefilla';
+  font-size: 3em;
 }
 
 body {
-	box-sizing: border-box;
-	min-width: 800px;
-	margin: 0;
-	font-family: open sans;
-	background-color: #fafafa;
+  box-sizing: border-box;
+  min-width: 800px;
+  margin: 0;
+  font-family: open sans;
+  background-color: #fafafa;
 }
 
 header {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	position: fixed;
-	top: 0;
-	z-index: 1;
-	min-width: 800px;
-	width: 100%;
-	height: 77px;
-	padding-left: 5px;
-	padding-right: 5px;
-	background-color: #ffffff;
-	resize: both;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  min-width: 800px;
+  width: 100%;
+  height: 77px;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: #ffffff;
+  resize: both;
 }
 
 header a {
-	padding-left: 25px;
-	padding-right: 25px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	border: 1px solid #dbdbdb;
-	border-radius: 4px;
-	font-weight: bold;
-	text-decoration: none;
-	color: #262626;
-	background-color: transparent;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: 1px solid #dbdbdb;
+  border-radius: 4px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #262626;
+  background-color: transparent;
 }
 
 header a:visited {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 header a:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 button {
-	padding-left: 25px;
-	padding-right: 25px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	border: 1px solid #dbdbdb;
-	border-radius: 4px;
-	font-weight: bold;
-	color: #262626;
-	background-color: transparent;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: 1px solid #dbdbdb;
+  border-radius: 4px;
+  font-weight: bold;
+  color: #262626;
+  background-color: transparent;
 }
 
 button:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 button:focus {
-	outline: 0;
+  outline: 0;
 }
 
 input {
-	box-sizing: border-box;
-	padding: 5px;
-	color: #717171;
-	border: 1px solid #dbdbdb;
-	border-radius: 4px;
+  box-sizing: border-box;
+  padding: 5px;
+  color: #717171;
+  border: 1px solid #dbdbdb;
+  border-radius: 4px;
 }
 
 input:focus {
-	color: #717171;
+  color: #717171;
 }
 
-::placeholder { /* Firefox */
-	color: #717171;
-	opacity: 1;
+::placeholder {
+  /* Firefox */
+  color: #717171;
+  opacity: 1;
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-	color: #717171;
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #717171;
 }
 
-::-ms-input-placeholder { /* Microsoft Edge */
-	color: #717171;
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #717171;
 }
 
 #overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: #c1bdba;
-	z-index: 2;
-	opacity: 0.6;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #c1bdba;
+  z-index: 2;
+  opacity: 0.6;
 }
 
 #custom-confirm {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 3;
-	padding: 1%;
-	background-color: #fafafa;
-	border-radius: 4px;
-	box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
-	opacity: 1;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+  padding: 1%;
+  background-color: #fafafa;
+  border-radius: 4px;
+  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
+  opacity: 1;
 }
 
 #custom-confirm button {
-	width: 48%;
-	margin: 1%;
+  width: 48%;
+  margin: 1%;
 }
 
 .no-scroll {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 .invisible {
-	display: none
+  display: none;
 }
 
 #header-buttons-div button {
-	margin: 10px;
+  margin: 10px;
 }
 
 #home-main {
-	padding-top: 77px;
+  padding-top: 77px;
 }
 
 #home-message-container {
-	position: fixed;
-	top: 123px;
-	right: 0;
-	padding: 0.5%;
-	text-align: right;
-	background-color: #ffffff;
-	border: 1px solid #e6e6e6;
-	border-radius: 4px;
+  position: fixed;
+  top: 123px;
+  right: 0;
+  padding: 0.5%;
+  text-align: right;
+  background-color: #ffffff;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
 }
 
 #hello {
-	font-family: "Shefilla";
-	font-size: 3em;
+  font-family: 'Shefilla';
+  font-size: 3em;
 }
 
 #account-message-container {
-	padding: 1%;
-	text-align: center;
+  padding: 1%;
+  text-align: center;
 }
 
 #reset-password-message-container {
-	background-color: #13232f;
-	padding: 1%;
+  background-color: #13232f;
+  padding: 1%;
 }
 
 #form-container {
-	position: fixed;
-	top: 77px;
-	right: 0;
-	padding: 0.5%;
-	background-color: #ffffff;
-	border: 1px solid #e6e6e6;
-	border-radius: 4px;
+  position: fixed;
+  top: 77px;
+  right: 0;
+  padding: 0.5%;
+  background-color: #ffffff;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
 }
 
 #form-container input {
-	border: 1px solid #e6e6e6;
-	border-radius: 4px;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
 }
 
 #gallery {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .photo-container {
-	max-width: 614px;
-	margin: 1%;
-	border: 1px solid #e6e6e6;
-	border-radius: 4px;
-	background-color: #ffffff;
+  max-width: 614px;
+  margin: 1%;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+  background-color: #ffffff;
 }
 
 .login {
-	margin: 5px;
-	font-weight: 600;
-	color: #262626;
+  margin: 5px;
+  font-weight: 600;
+  color: #262626;
 }
 
 .photo {
-	width: 100%;
+  width: 100%;
 }
 
 .like-comment {
-	display: flex;
-	flex-direction: row;
-	margin: 5px;
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
 }
 
 .like-symbol-active:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .like-symbol-liked {
-	color: red;
+  color: red;
 }
 
 .like {
-	margin-right: 1%;
+  margin-right: 1%;
 }
 
 .comment-container {
-	display: flex;
-	margin-top: 5px;
-	margin-bottom: 5px;
+  display: flex;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .delete-comment-button {
-	margin-left: 10px;
-	padding: 0;
-	border: 0;
+  margin-left: 10px;
+  padding: 0;
+  border: 0;
 }
 
 .login-div {
-	padding-left: 5px;
-	padding-right: 5px;
-	font-weight: 600;
-	color: #262626;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-weight: 600;
+  color: #262626;
 }
 
 .add-comment-input {
-	width: 100%;
-	margin-top: 1%;
+  width: 100%;
+  margin-top: 1%;
 }
 
 .add-comment-button {
-	width: 100%;
+  width: 100%;
 }
 
 #content {
-	padding-top: 77px;
+  padding-top: 77px;
 }
 
 .custom-file-upload {
-	padding-left: 25px;
-	padding-right: 25px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	border: 1px solid #dbdbdb;
-	border-radius: 4px;
-	font-weight: bold;
-	color: #262626;
-	background-color: transparent;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: 1px solid #dbdbdb;
+  border-radius: 4px;
+  font-weight: bold;
+  color: #262626;
+  background-color: transparent;
 }
 
 .custom-file-upload:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 #capture-button:disabled {
-	cursor: auto;
+  cursor: auto;
 }
 
 #palette {
-	box-sizing: initial;
+  box-sizing: initial;
 }
 
 #photo-section {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	background-color: #f9f9fa;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: #f9f9fa;
 }
 
 #container {
-	position: relative;
-	margin: 1%;
-	max-width: 80vh;
-	max-height: 60vh;
+  position: relative;
+  margin: 1%;
+  max-width: 80vh;
+  max-height: 60vh;
 }
 
 #video {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	text-align: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  text-align: center;
 }
 
 #video-error {
-	text-align: center;
+  text-align: center;
 }
 
 #uploaded-image {
-    position: relative;
-    max-width: 80vh;
-    max-height: 60vh;
+  position: relative;
+  max-width: 80vh;
+  max-height: 60vh;
 }
 
 #change-section {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	min-width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-width: 800px;
 }
 
 #change-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border: 1px solid #dbdbdb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #dbdbdb;
 }
 
 #change-section input {
-	margin: 5px;
+  margin: 5px;
 }
 
 #stickers-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
 }
 
 #stickers-carousel-buttons {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 #stickers-container button {
-	margin: 1%;
-	padding: 1%;
-	width: 50px;
-	height: 50px;
+  margin: 1%;
+  padding: 1%;
+  width: 50px;
+  height: 50px;
 }
 
 #stickers {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	width: 800px;
-	overflow-x: auto;
-	overflow-y: hidden;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 800px;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .image-div {
-	box-sizing: border-box;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-right: 100px;
-	max-width: 200px;
-	max-height: 200px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 100px;
+  max-width: 200px;
+  max-height: 200px;
 }
 
 .image-div:last-child {
-	margin-right: 0;
+  margin-right: 0;
 }
 
 .sticker {
-	max-width: 200px;
-	max-height: 200px;
-	cursor: pointer;
-}
-
-.sticked-sticker {
-	box-sizing: border-box;
+  max-width: 200px;
+  max-height: 200px;
+  cursor: pointer;
 }
 
 .sticked-sticker:hover {
-	border: 1px solid #dbdbdb;
+  outline: 1px solid #dbdbdb;
 }
 
 #user-photos {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: #f9f9fa;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f9f9fa;
 }
 
 .user-photo-container {
-	margin: 1%;
+  margin: 1%;
 }
 
 .user-photo {
-	width: 100%;
+  width: 100%;
 }
 
 .publish-button {
-	width: 50%;
+  width: 50%;
 }
 
 .delete-button {
-	width: 50%;
+  width: 50%;
 }
 
-input[type="file"] {
-	display: none;
+input[type='file'] {
+  display: none;
 }
 
 img {
-	-webkit-user-drag: none;
-	-khtml-user-drag: none;
-	-moz-user-drag: none;
-	-o-user-drag: none;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
+
+.hand-cursor {
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.horizontal-cursor {
+  cursor: ew-resize;
+}
+
+.vertical-cursor {
+  cursor: ns-resize;
+}
+
+.slash-cursor {
+  cursor: nesw-resize;
+}
+
+.backslash-cursor {
+  cursor: nwse-resize;
 }
