--- a/views/account.html
+++ b/views/account.html
@@ -35,18 +35,18 @@
 			<section id='change-section'>
 				<div id='account-message-container'></div>
 				<div id='change-container'>
-					<div>
+					<form id='change-email-form'>
 						<input id='email' placeholder='Email' type='text' value=''>
-						<button id='change-email-button'>Change</button>
-					</div>
-					<div>
+						<input type='submit' value='Change'>
+					</form>
+					<form id='change-login-form'>
 						<input id='login' placeholder='Login' type='text' value=''>
-						<button id='change-login-button'>Change</button>
-					</div>
-					<div>
+						<input type='submit' value='Change'>
+					</form>
+					<form id='change-password-form'>
 						<input id='password' placeholder='Password' type='password' value=''>
-						<button id='change-password-button'>Change</button>
-					</div>
+						<input type='submit' value='Change'>
+					</form>
 					<button id='notification-status'></button>
 				</div>
 			</section>
