--- a/views/home.html
+++ b/views/home.html
@@ -14,9 +14,9 @@
 			<div id='header-buttons-div'></div>
 		</header>
 		
-		<div id='form-container' class='invisible'>
+		<form id='form-container' class='invisible'>
 			<span id='home-message-container'></span>
-		</div>
+		</form>
 		<main id='home-main'>
 			<div id='gallery'></div>
 		</main>
