--- a/views/resetPassword.html
+++ b/views/resetPassword.html
@@ -5,11 +5,11 @@
 		<link rel='stylesheet' href='css/styles.css'>
 	</head>
 	<body>
-		<div>
+		<form id='reset-password-form'>
 			<input id='reset-password-password' placeholder='New password' type='password' value=''>
-			<button id='reset-password-button'>Submit</button>
+			<input type='submit' value='Submit'>
 			<a href='/'>Go Home</a>
-		</div>
+		</form>
 		<div id='reset-password-message-container'></div>
 	</body>
 	<script src='js/resetPassword.js' type='module'></script>
