initiated resize controls for mobile device

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -465,3 +465,45 @@ img {
 .backslash-cursor {
   cursor: nwse-resize;
 }
+
+
+
+#change-sticker-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#change-buttons {
+  display: flex;
+  flex-direction: row;
+}
+
+#change-buttons button {
+  height: 50px;
+  margin: 30px;
+}
+
+#resize-scroll {
+  width: 50%;
+  height: 50px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  border: 1px solid #dbdbdb;
+  margin: 10px;
+}
+
+#resize-scroll::-webkit-scrollbar {
+  height: 49px;
+  background-color: #F5F5F5;
+}
+
+#resize-scroll::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #262626;;
+}
+
+#scroll-content {
+  width: 500%;
+  height: 100%;
+}
