--- a/views/account.html
+++ b/views/account.html
@@ -24,6 +24,18 @@
 				<div id='photo-section'>
 					<div id='container'></div>
 				</div>
+				<div id='change-sticker-section'>
+					<div id='change-buttons'>
+						<button id='change-width-button'>Change width</button>
+						<button id='change-height-button'>Change height</button>
+						<button id='change-size-button'>Change size</button>
+						<button id='move-up-down'>Up - Down</button>
+						<button id='move-left-right'>Left - Right</button>
+					</div>
+					<div id='resize-scroll'>
+						<div id='scroll-content'></div>
+					</div>
+				</div>
 				<div id='stickers-container'>
 					<div id='stickers-carousel-buttons'>
 						<button id='stickers-back'><i class="fas fa-angle-left"></i></button>
