--- a/views/account.html
+++ b/views/account.html
@@ -26,11 +26,11 @@
 				</div>
 				<div id='change-sticker-section'>
 					<div id='change-buttons'>
-						<button id='change-width-button'>Change width</button>
-						<button id='change-height-button'>Change height</button>
-						<button id='change-size-button'>Change size</button>
-						<button id='move-up-down'>Up - Down</button>
-						<button id='move-left-right'>Left - Right</button>
+						<button id='change-width-button' class='change-button'>Change width</button>
+						<button id='change-height-button' class='change-button'>Change height</button>
+						<button id='change-size-button' class='change-button'>Change size</button>
+						<button id='move-up-down' class='change-button'>Up - Down</button>
+						<button id='move-left-right' class='change-button'>Left - Right</button>
 					</div>
 					<div id='resize-scroll'>
 						<div id='scroll-content'></div>
