continued resize controls on mobile devices

--- a/views/account.html
+++ b/views/account.html
@@ -31,6 +31,7 @@
 						<button id='change-size-button' class='change-button'>Change size</button>
 						<button id='move-up-down' class='change-button'>Up - Down</button>
 						<button id='move-left-right' class='change-button'>Left - Right</button>
+						<button id='delete-sticker'>Delete sticker</button>
 					</div>
 					<div id='resize-scroll'>
 						<div id='scroll-content'></div>
