--- a/views/account.html
+++ b/views/account.html
@@ -33,9 +33,13 @@
 						<button id='move-left-right' class='change-button'>Left - Right</button>
 						<button id='delete-sticker'>Delete sticker</button>
 					</div>
-					<div id='resize-scroll'>
+					<div id='change-scrolls'></div>
+					<!-- <div id='resize-scroll'>
 						<div id='scroll-content'></div>
-					</div>
+					</div> -->
+					<!-- <div class='scroll'>
+						<div class='scroll-content'></div>
+					</div> -->
 				</div>
 				<div id='stickers-container'>
 					<div id='stickers-carousel-buttons'>
