initiated separate scroll resize for each sticker

--- a/views/account.html
+++ b/views/account.html
@@ -24,7 +24,7 @@
 				<div id='photo-section'>
 					<div id='container'></div>
 				</div>
-				<div id='change-sticker-section'>
+				<!-- <div id='change-sticker-section'>
 					<div id='change-buttons'>
 						<button id='change-width-button' class='change-button'>Change width</button>
 						<button id='change-height-button' class='change-button'>Change height</button>
@@ -34,13 +34,7 @@
 						<button id='delete-sticker'>Delete sticker</button>
 					</div>
 					<div id='change-scrolls'></div>
-					<!-- <div id='resize-scroll'>
-						<div id='scroll-content'></div>
-					</div> -->
-					<!-- <div class='scroll'>
-						<div class='scroll-content'></div>
-					</div> -->
-				</div>
+				</div> -->
 				<div id='stickers-container'>
 					<div id='stickers-carousel-buttons'>
 						<button id='stickers-back'><i class="fas fa-angle-left"></i></button>
