--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -409,9 +409,11 @@ input:focus {
 
 .mobile-sticked-sticker {
   position: absolute;
-  left: 50%;
+  top: 0;
+  left: 0;
+  /* left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
 }
 
 .sticked-sticker:hover {
