--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -553,3 +553,25 @@ img {
 .selected-change-button {
   border: 1px solid green;
 }
+
+#reset-password-form {
+  padding: 0.5%;
+  background-color: #ffffff;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+}
+
+#reset-password-message-container {
+  position: fixed;
+  top: 77px;
+  left: 0;
+  padding: 0.5%;
+  text-align: right;
+  background-color: #ffffff;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+}
+
+#go-home-link {
+  margin: 10px;
+}
