--- a/views/resetPassword.html
+++ b/views/resetPassword.html
@@ -3,13 +3,18 @@
 	<head>
 		<title>Reset Password</title>
 		<link rel='stylesheet' href='css/styles.css'>
+
+			<!-- TEMP CHANGE -->
+		<!-- <link rel='stylesheet' href='../public/css/styles.css'> -->
 	</head>
 	<body>
-		<form id='reset-password-form'>
-			<input id='reset-password-password' placeholder='New password' type='password' value=''>
-			<input type='submit' value='Submit'>
-			<a href='/'>Go Home</a>
-		</form>
+		<header>
+			<form id='reset-password-form'>
+				<input id='reset-password-password' placeholder='New password' type='password' value=''>
+				<input type='submit' value='Submit'>
+			</form>
+			<a id='go-home-link' href='/'>Go Home</a>
+		</header>
 		<div id='reset-password-message-container'></div>
 	</body>
 	<script src='js/resetPassword.js' type='module'></script>
