--- a/views/404.html
+++ b/views/404.html
@@ -5,9 +5,11 @@
 		<link rel='stylesheet' href='css/styles.css'>
 	</head>
 	<body>
-		<h1>Oops!</h1>
-		<h2>It looks like the page you are looking for cannot be found.</h2>
-		<p>Error code: 404</p>
-		<a href='/'>Home</a>
+		<div id='page-not-found-content'>
+			<h1>Oops!</h1>
+			<h2>It looks like the page you are looking for cannot be found.</h2>
+			<p>Error code: 404</p>
+			<a id='page-not-found-home-link' href='/'>Go Home</a>
+		</div>
 	</body>
 </html>
