--- a/views/home.html
+++ b/views/home.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Camagru</title>
-		<link rel='stylesheet' href='css/styles.css'>
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-	</head>
-	<body>
-		<header>
-			<div id='website-title'>
-				<i class="far fa-images"></i>
-				Camagru Gallery
-			</div>
-			<div id='header-buttons-div'></div>
-		</header>
-		
-		<form id='form-container' class='invisible'>
-			<span id='home-message-container'></span>
-		</form>
-		<main id='home-main'>
-			<div id='gallery'></div>
-		</main>
-	</body>
-	<script src='/js/home.js' type='module'></script>
-	<script src='/js/utils.js' type='module'></script>
+
+<head>
+	<title>Camagru</title>
+	<link rel='stylesheet' href='css/styles.css'>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+	 crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+	<header>
+		<h1 id='website-title'>
+			<i class="far fa-images"></i>
+			Camagru Gallery
+		</h1>
+		<div id='header-buttons-div'></div>
+	</header>
+
+	<form id='form-container' class='invisible'>
+		<span id='home-message-container'></span>
+	</form>
+	<main id='home-main'>
+		<div id='gallery'></div>
+	</main>
+</body>
+<script src='/js/home.js' type='module'></script>
+<script src='/js/utils.js' type='module'></script>
+
 </html>
