--- a/views/resetPassword.html
+++ b/views/resetPassword.html
@@ -3,9 +3,7 @@
 	<head>
 		<title>Reset Password</title>
 		<link rel='stylesheet' href='css/styles.css'>
-
-			<!-- TEMP CHANGE -->
-		<!-- <link rel='stylesheet' href='../public/css/styles.css'> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<header>
@@ -13,7 +11,7 @@
 				<input id='reset-password-password' placeholder='New password' type='password' value=''>
 				<input type='submit' value='Submit'>
 			</form>
-			<a id='go-home-link' href='/'>Go Home</a>
+			<a id='reset-password-home-link' href='/'>Go Home</a>
 		</header>
 		<div id='reset-password-message-container'></div>
 	</body>
